--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,13 @@
+
+@font-face {
+    font-family: 'ZCOOLKuaiLe';
+    src: url('../fonts/ZCOOLKuaiLe-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}   
+
+
+
 body{
     width：100%；
     height: 100%;
@@ -16,6 +26,10 @@ body{
     border-left: 1px solid black;
     width: 10%;
     text-align: center;
+}
+.maintable td button{
+    font-family: ZCOOLKuaiLe;
+    font-size: 30px;
 }
 
 .itemtable{
@@ -62,6 +76,8 @@ body{
 
 }
 
+
+
 .shoppingCarTableDiv{
 
 }
@@ -84,16 +100,35 @@ body{
 }
 
 .shoppingCarButton{
-    position:fixed;
-    right:50px;
-    bottom:50px;
+    position: fixed;
+    left:10px;
+    bottom: 10px;
+    width: 80px;
+    height: 50px;
+    background-color: #a4d7ff;
+    border-radius: 30px;
+        font-family: ZCOOLKuaiLe;
+    font-size: 30px;
 }
+
+
+.footCover{
+        position:fixed;
+    bottom:0px;
+    border-top: 2px solid black;
+    min-width: 100%;
+    height: 70px;
+    background-color: azure;
+}
+
 
 footer{
     position:fixed;
-    bottom:100px;
+    bottom:0px;
     border-top: 2px solid black;
     min-width: 100%;
+    height: 70px;
+    background-color: azure;
 }
 
 .checkTable{
@@ -104,6 +139,9 @@ footer{
 .creatFinalListButton{
     
 }
+/*button*/
+
+
 
 /* Wrapper */
 
