--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,9 @@
 
 body{
     width：100%；
+    max-width:  100%;
     height: 100%;
+    margin-bottom: 100px;
 }
 
 .maintable{
@@ -41,9 +43,9 @@ body{
 }
 
 .itemtable td{
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    border-left: 1px solid black;
+    border-top: 1px solid #121d2561;
+    border-bottom: 1px solid #121d2561;
+    border-left: 1px solid #121d2561;
     width: 10%;
     max-height: 50px;
     text-align: center;
@@ -91,10 +93,10 @@ body{
 }
 
 .shoppingCarTable td{
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    border-left: 1px solid black;
-    width: 10%;
+    border-top: 1px solid #121d2561;
+    border-bottom: 1px solid #121d2561;
+    border-left: 1px solid #121d2561;
+    /*width: 10%;*/
     max-height: 50px;
     text-align: center;
 }
@@ -103,12 +105,13 @@ body{
     position: fixed;
     left:10px;
     bottom: 10px;
-    width: 80px;
+    width: 150px;
     height: 50px;
     background-color: #a4d7ff;
     border-radius: 30px;
         font-family: ZCOOLKuaiLe;
     font-size: 30px;
+        white-space: nowrap;
 }
 
 
@@ -138,6 +141,11 @@ footer{
 
 .creatFinalListButton{
     
+}
+
+
+#bodyWarrper{
+    padding: 50;
 }
 /*button*/
 
