--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,9 +43,9 @@ body{
 }
 
 .itemtable td{
-    border-top: 1px solid #121d2561;
-    border-bottom: 1px solid #121d2561;
-    border-left: 1px solid #121d2561;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    border-left: 1px solid lightgray;
     width: 10%;
     max-height: 50px;
     text-align: center;
@@ -93,9 +93,9 @@ body{
 }
 
 .shoppingCarTable td{
-    border-top: 1px solid #121d2561;
-    border-bottom: 1px solid #121d2561;
-    border-left: 1px solid #121d2561;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    border-left: 1px solid lightgray;
     /*width: 10%;*/
     max-height: 50px;
     text-align: center;
