--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,7 +58,7 @@ body{
     outline: 0;
     width: 100%;
     height: 100%;
-     margin: auto;
+    margin: auto;
 }
 
 .buttonClass:target {
@@ -73,7 +73,7 @@ body{
 .itemNumberDisplay{
     resize: none; 
     width: 30px;
-     margin: auto;
+    margin: auto;
     border: none;
 
 }
@@ -89,7 +89,7 @@ body{
     height: 95%;
     margin: auto;
     display: none;
-    
+
 }
 
 .shoppingCarTable td{
@@ -109,14 +109,27 @@ body{
     height: 50px;
     background-color: #a4d7ff;
     border-radius: 30px;
-        font-family: ZCOOLKuaiLe;
+    font-family: ZCOOLKuaiLe;
     font-size: 30px;
-        white-space: nowrap;
+    white-space: nowrap;
+}
+
+.shoppingCarButtonMin{
+    position: fixed;
+    left:10px;
+    bottom: 10px;
+    width: 50px;
+    height: 50px;
+    background-color: #a4d7ff;
+    border-radius: 30px;
+    font-family: ZCOOLKuaiLe;
+    font-size: 30px;
+    white-space: nowrap;
 }
 
 
 .footCover{
-        position:fixed;
+    position:fixed;
     bottom:0px;
     border-top: 2px solid black;
     min-width: 100%;
@@ -135,42 +148,76 @@ footer{
 }
 
 .checkTable{
-     width: 100%;
+    width: 100%;
 }
 
 
 .creatFinalListButton{
-    
+    width: 120px;
+    height: 40px;
+    background-color: #a4d7ff;
+    font-size: 20px;
+    white-space: nowrap;
 }
 
+
+.purchaseOrderDiv{
+    width: 100%;
+    display: none;
+}
+
+.purchaseOrderTable{
+    width: 100%
+        
+}
+.purchaseOrderTable td{
+    border: 1px solid black;
+        
+}
 
 #bodyWarrper{
     padding: 50;
 }
-/*button*/
 
+
+.bigImageCover{
+    width: 100%;
+    height: 100%;
+    background-color: #000000d4;
+    position: fixed;
+    top: 0;
+    display: none;
+}
+
+.bigImage{
+    width: 50%;
+    left: 25%;
+    position: fixed;
+    top: 25%;
+    
+}
 
 
 /* Wrapper */
 
-	#wrapper {
-		width: 64em;
-		max-width: calc(100% - 4em);
-		margin: 0 auto;
-	}
+#wrapper {
+    width: 64em;
+    max-width: calc(100% - 4em);
+    margin: 0 auto;
+}
 
-		@media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {
 
-			#wrapper {
-				max-width: calc(100% - 2em);
-			}
+    #wrapper {
+        max-width: calc(100% - 2em);
+    }
 
-		}
+}
 
-		@media screen and (max-width: 360px) {
+@media screen and (max-width: 360px) {
 
-			#wrapper {
-				max-width: 100%;
-			}
+    #wrapper {
+        max-width: 100%;
+    }
 
-		}
+}
